# management-gateway-service

./: .gitignore  .licenserc.json  Cargo.toml  README.md  check_this.sh  foo.rs  hash.rhai  hubris.dry.1  rust-toolchain.toml
.github/buildomat/jobs/: bins.sh
.github/workflows/: license-check.yml  rust.yml
compose-wireshark-plugin/: Cargo.toml
compose-wireshark-plugin/src/: main.rs
faux-mgs/: Cargo.toml
faux-mgs/src/: host_phase2.rs  main.rs  rhai.rs  rhaiscript.rs  usart.rs
faux-mgs/src/rhaiscript/: hubris.rs
gateway-ereport-messages/: Cargo.toml
gateway-ereport-messages/src/: lib.rs
gateway-messages/: Cargo.toml
gateway-messages/src/: ereport.rs  lib.rs  mgs_to_sp.rs  sp_impl.rs  sp_to_mgs.rs  tlv.rs
gateway-messages/src/sp_to_mgs/: host_cpu_details.rs  ignition.rs  measurement.rs  monorail_port_status.rs  sp3_details.rs  sp5_details.rs  tofino.rs  vpd.rs  vsc7448_port_status.rs
gateway-messages/tests/: integration_tests.rs
gateway-messages/tests/versioning/: mod.rs  v02.rs  v03.rs  v04.rs  v05.rs  v06.rs  v07.rs  v08.rs  v09.rs  v10.rs  v11.rs  v12.rs  v13.rs  v14.rs  v15.rs  v16.rs  v17.rs  v18.rs  v19.rs  v2.rs  v20.rs  v21.rs  v22.rs  v23.rs  v24.rs  v25.rs  v3.rs  v4.rs  v5.rs  v6.rs  v7.rs  v8.rs
gateway-sp-comms/: Cargo.toml  build.rs
gateway-sp-comms/src/: communicator.rs  ereport.rs  error.rs  host_phase2.rs  lib.rs  management_switch.rs  scope_id_cache.rs  shared_socket.rs  single_sp.rs  sp_response_expect.rs  sp_response_ext.rs
gateway-sp-comms/src/management_switch/: location_map.rs
gateway-sp-comms/src/single_sp/: startup.rs  update.rs
gateway-sp-comms/tests/: phase2-trimmed.img
multiple-vlan-debugging/: Cargo.toml
multiple-vlan-debugging/src/: main.rs
scripts/: FMR  README.md  TEST_PLAN.md  TODO.md  grapefruit-power  targets-reset-fail.json  targets.json  test-power.rhai  test_getopts.rhai  test_rot_power_recovery.rhai  update-helper.rhai  update.rhai  upgrade-rollback-transient.rhai  upgrade-rollback.rhai  util.rhai
wireshark/: README.md  extra_fields.lua  message_kind.lua  mgs.lua  mgs_error.lua  mgs_request.lua  mgs_response.lua  protofields.lua  sp_error.lua  sp_request.lua  sp_response.lua  util.lua
xtask/: Cargo.toml
xtask/src/: main.rs
