[workspace]
members = [
    "faux-mgs",
    "gateway-messages",
    "gateway-sp-comms",
]

default-members = [
    "faux-mgs",
    "gateway-messages",
    "gateway-sp-comms",
]
resolver = "2"

[workspace.dependencies]
tlvc = { git = "https://github.com/oxidecomputer/tlvc.git", branch = "main" }
hubtools = { git = "https://github.com/oxidecomputer/hubtools.git", branch = "main"}
slog-error-chain = { git = "https://github.com/oxidecomputer/slog-error-chain.git", branch = "main", features = ["derive"] }

anyhow = "1.0"
async-trait = "0.1"
backoff = { version = "0.4.0", features = ["tokio"] }
bitflags = "2.5.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.30"
fxhash = "0.2.1"
glob = "0.3.1"
hex = "0.4.3"
hubpack = "0.1.2"
lru-cache = "0.1.2"
nix = { version = "0.27.1", features = ["net"] }
once_cell = "1.19.0"
paste = "1.0.14"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.115"
serde_repr = { version = "0.1" }
sha2 = "0.10"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_trace"] }
slog-async = "2.8"
slog-term = "2.9"
smoltcp = { version = "0.9", default-features = false, features = ["proto-ipv6"] }
socket2 = "0.5.6"
static_assertions = "1.1.0"
strum_macros = "0.25"
string_cache = "0.8.7"
termios = "0.3"
thiserror = "1.0.59"
tokio = { version = "1.29", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-util = { version = "0.7", features = ["compat"] }
usdt = "0.5.0"
uuid = { version = "1.8", default-features = false }
version_check = "0.9.4"
zerocopy = "0.6.6"
zip = { version = "0.6.6", default-features = false, features = ["deflate", "bzip2"] }

gateway-messages.path = "gateway-messages"
gateway-sp-comms.path = "gateway-sp-comms"
