[workspace]
members = [
    "compose-wireshark-plugin",
    "faux-mgs",
    "gateway-ereport-messages",
    "gateway-messages",
    "gateway-sp-comms",
    "xtask",
]

default-members = [
    "compose-wireshark-plugin",
    "faux-mgs",
    "gateway-ereport-messages",
    "gateway-messages",
    "gateway-sp-comms",
]
resolver = "2"

[workspace.dependencies]
tlvc = { git = "https://github.com/oxidecomputer/tlvc.git", branch = "main" }
hubtools = { git = "https://github.com/oxidecomputer/hubtools.git", branch = "main"}
slog-error-chain = { git = "https://github.com/oxidecomputer/slog-error-chain.git", branch = "main", features = ["derive"] }

anyhow = "1.0"
async-trait = "0.1"
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = "0.22.1"
bitflags = "2.9.1"
camino = "1.1.10"
camino-tempfile = "1.4.1"
clap = { version = "4.5", features = ["derive", "env"] }
convert_case = "0.8"
expectorate = "=1.1.0" # 1.2 requires rust 1.75; bump eventually
futures = "0.3.31"
fxhash = "0.2.1"
glob = "0.3.2"
hex = "0.4.3"
hubpack = "0.1.2"
humantime = "2.2.0"
indicatif = "0.18"
lru-cache = "0.1.2"
lzss = "0.8"
nix = { version = "0.27.1", features = ["net"] }
omicron-zone-package = "0.11.0"
once_cell = "1.21.3"
paste = "1.0.15"
parse_int = "0.6"
rand = "0.8.5"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-big-array = "0.5.1"
serde_bytes = "0.11.17"
serde_cbor = "0.11.2"
serde_json = "1.0.142"
serde_repr = { version = "0.1" }
sha2 = "0.10"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_trace"] }
slog-async = "2.8"
slog-term = "2.9"
smoltcp = { version = "0.9", default-features = false, features = ["proto-ipv6"] }
socket2 = "0.5.10"
ssh-agent-client-rs = "0.9.1"
ssh-key = { version = "0.6.7", features = ["p256"] }
static_assertions = "1.1.0"
strum = { version = "0.27.2", default-features = false }
strum_macros = "0.27.2"
string_cache = "0.8.9"
termios = "0.3"
thiserror = "1.0.69"
tokio = { version = "1.29", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-util = { version = "0.7", features = ["compat"] }
usdt = "0.5.0"
uuid = { version = "1.16", default-features = false }
version_check = "0.9.5"
zerocopy = "0.8.26"
zip = { version = "0.6.6", default-features = false, features = ["deflate", "bzip2"] }

gateway-messages.path = "gateway-messages"
gateway-sp-comms.path = "gateway-sp-comms"
gateway-ereport-messages.path = "gateway-ereport-messages"
