[package]
name = "compose-wireshark-plugin"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
convert_case.workspace = true
gateway-messages.workspace = true
strum.workspace = true

[dev-dependencies]
camino-tempfile.workspace = true
expectorate.workspace = true
