[package]
name = "faux-mgs"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
futures.workspace = true
glob.workspace = true
hex.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
slog.workspace = true
slog-async.workspace = true
slog-term.workspace = true
termios.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
uuid = { workspace = true, features = ["std", "v4"] }

gateway-messages = { workspace = true, features = ["std"] }
gateway-sp-comms.workspace = true
