[package]
name = "faux-mgs"
version = "0.1.1"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
futures.workspace = true
glob.workspace = true
hex.workspace = true
humantime.workspace = true
nix.workspace = true
rand.workspace = true
parse_int.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
slog.workspace = true
slog-async.workspace = true
slog-term.workspace = true
ssh-agent-client-rs.workspace = true
ssh-key.workspace = true
termios.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
uuid = { workspace = true, features = ["std", "v4"] }
zerocopy.workspace = true

gateway-messages = { workspace = true, features = ["std"] }
gateway-sp-comms.workspace = true

async-recursion = { workspace = true, optional = true }
hubtools = { workspace = true, optional = true }
lpc55_areas = { workspace = true, optional = true }
lpc55_sign= { workspace = true, optional = true }
rhai-chrono = { workspace = true, optional = true }
rhai-env = { workspace = true, optional = true }
rhai-fs = { workspace = true, optional = true }
rhai = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[features]
default = ["rhaiscript"]
rhaiscript = [ "dep:async-recursion", "dep:hubtools", "dep:lpc55_areas", "dep:lpc55_sign", "dep:rhai", "dep:rhai-chrono", "dep:rhai-env", "dep:rhai-fs", "dep:thiserror", "dep:toml"]
