[package]
name = "gateway-messages"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
bitflags = "1.3.2"
hubpack = "0.1"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde_repr = { version = "0.1" }
static_assertions = "1.1.0"
uuid = { version = "1.1", default-features = false }
zerocopy = "0.6.1"

[dependencies.smoltcp]
version = "0.8"
default-features = false
features = ["proto-ipv6"]
optional = true

[features]
default = ["smoltcp"]
std = []
