[package]
name = "gateway-messages"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
bitflags.workspace = true
hubpack.workspace = true
serde.workspace = true
serde-big-array.workspace = true
serde_repr.workspace = true
smoltcp = { workspace = true, optional = true }
static_assertions.workspace = true
strum_macros.workspace = true
uuid.workspace = true
zerocopy = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["smoltcp"]
std = []
