[package]
name = "gateway-sp-comms"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"

[dependencies]
async-trait = "0.1"
backoff = { version = "0.4.0", features = ["tokio"] }
futures = "0.3.24"
nix = { version = "0.26", default-features = false, features = ["net"] }
once_cell = "1.15.0"
serde = { version = "1.0", features = ["derive"] }
slog = "2.7"
thiserror = "1.0.37"
tlvc = {git = "https://github.com/oxidecomputer/tlvc.git"}
usdt = "0.3.1"
uuid = "1.1.0"
zip = { version = "0.6.2", default-features = false, features = ["deflate","bzip2"] }

gateway-messages = { path = "../gateway-messages", features = ["std"] }

[dependencies.tokio]
version = "1.21"
features = [ "full" ]
