[package]
name = "gateway-sp-comms"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
async-trait = "0.1"
backoff = { version = "0.4.0", features = ["tokio"] }
futures = "0.3.24"
fxhash = "0.2.1"
hex = "0.4.3"
hubpack = "0.1"
lru-cache = "0.1.2"
# TODO: Replace with real nix after https://github.com/nix-rust/nix/pull/1973 is
# merged / released
nix = { git = "https://github.com/jgallagher/nix", branch = "r0.26-illumos" }
once_cell = "1.15.0"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.0"
slog = "2.7"
socket2 = "0.5.1"
string_cache = "0.8.4"
thiserror = "1.0.37"
tlvc = {git = "https://github.com/oxidecomputer/tlvc.git"}
usdt = "0.3.1"
uuid = "1.1.0"
zip = { version = "0.6.2", default-features = false, features = ["deflate","bzip2"] }

gateway-messages = { path = "../gateway-messages", features = ["std"] }

[dependencies.tokio]
version = "1.21"
features = [ "full" ]

# This is required for the build.rs script to check for an appropriate compiler
# version so that `usdt` can be built on stable rust.
[build-dependencies]
version_check = "0.9.4"
