[package]
name = "gateway-sp-comms"
version = "0.1.1"
edition = "2021"
license = "MPL-2.0"

[dependencies]
async-recursion.workspace = true
async-trait.workspace = true
backoff.workspace = true
futures.workspace = true
fxhash.workspace = true
hex.workspace = true
hubpack.workspace = true
hubtools.workspace = true
nix.workspace = true
lru-cache.workspace = true
once_cell.workspace = true
paste.workspace = true
serde.workspace = true
serde-big-array.workspace = true
slog.workspace = true
slog-error-chain.workspace = true
socket2.workspace = true
string_cache.workspace = true
thiserror.workspace = true
tlvc.workspace = true
tokio.workspace = true
usdt.workspace = true
uuid.workspace = true
zip.workspace = true

gateway-messages = { workspace = true, features = ["std"] }

# This is required for the build.rs script to check for an appropriate compiler
# version so that `usdt` can be built on stable rust.
[build-dependencies]
version_check.workspace = true
