[package]
name = "multiple-vlan-debugging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
gateway-sp-comms = { path = "../gateway-sp-comms" }
nix = { version = "0.26", default-features = false, features = ["net"] }
socket2 = "0.4"
tokio = { version = "1.21", features = ["full"] }
